# pcons

./: .gitignore  .readthedocs.yaml  ABOUT_THIS_TEMPLATE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  COMPARISONS.md  CONTRIBUTING.md  Containerfile  IMPLEMENTATION_PLAN.md  MANIFEST.in  Makefile  README.md  TODO.md  build.py  environment.yml  mkdocs.yml  pcons-build.py  pyproject.toml  setup.py
.github/: FUNDING.yml  release_message.sh  rename_project.sh
.github/workflows/: deploy-website.yml  main.yml  release.yml
docs/: build.py  index.md  macros.py  pcons-build.py  plan-archive-builders.md  plan-design-cleanup.md  plan-extensible-builders.md  plan-swift-toolchain.md  porting-from-cmake.md  porting-from-make.md  presets.md  user-guide.md
examples/: README.md
examples/01_concat/: pcons-build.py
examples/01_hello_c/: pcons-build.py  test.toml
examples/35_rez_integration/rez_packages/hello_lib/: CMakeLists.txt  package.py
examples/50_pyproject/: conanfile.txt  module.cpp  pcons-build.py  pyproject.toml  test.toml  test_editable.py  test_sdist.py  test_wheel.py
examples/50_pyproject/src/: hello.cpp  hello.hpp  module.cpp
pcons/: __init__.py  __main__.py  _gen_stubs.py  base.py  cli.py  generator.py  modules.py  node.py  project.py  test_runner.py
scripts/: pre-commit
tests/: conftest.py  test_base.py  test_builder_stubs_fresh.py  test_cli.py  test_example.py  test_examples.py  test_gen_stubs.py  test_modules.py  test_node.py  test_pyproject_backend.py  test_runner.py  test_smoke.py  test_user_errors.py
website/: wrangler.toml
(+408 files in other folders)
