[build-system]
requires = ["pcons", "conan"]
build-backend = "pcons.pyproject"

[project]
name = "pcons_hello_ext"
version = "0.0.1"
requires-python = ">=3.11"

[tool.uv]
# Prevent from using uv bundled Python, and use the system Python instead.
python-preference = "only-system"

[tool.pcons]
variant = "release"
# The install target to use for building the wheel.
# If not specified, the default "wheel" target will be used.
install-target = "install"

# Optional variables to pass to pcons for building.
# variables = { BUILD_TESTS = "OFF" } # example
